[package]
name = "be-chat-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.11.3"
chrono = { version = "0.4.37", features = ["serde"] }
regex = "1.10.4"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
futures = "0.3.5"
warp = "0.3.6"


